--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -14,7 +14,7 @@
 <body>
   <div class="container-fluid">
     <div class="card" style="width: 18rem;">
-      <img src="/images/image-qr-code.png" class="card-img-top" alt="...">
+      <img src="./images/image-qr-code.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Improve your front-end skills by building projects</h5>
         <p class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>        
